Fixes overflow in portfolio cards

--- a/css/main.css
+++ b/css/main.css
@@ -1213,12 +1213,19 @@ body.modal-open {
 
 .examples-link {
   text-decoration: none;
-  display: block;
   outline: none;
   -webkit-transition: -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
 .examples-link:focus, .examples-link:hover {
@@ -1289,9 +1296,11 @@ body.modal-open {
   padding-top: 20px;
   padding-bottom: 20px;
   border: 1px solid #eeeeee;
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-  background: #ffffff;
 }
 
 .card-content .title {
